# ChangeLog for www-plugins/form-history-control
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*form-history-control-1.2.7 (17 Oct 2010)

  17 Oct 2010; Martin Väth <martin@mvath.de>
  Bump version from sandbox. It is not keyworded, since I did not test it!

  01 Aug 2010; Martin Väth <martin@mvath.de>
  Bump revision to force eclass upgrade.

  31 Jul 2010; Martin Väth <martin@mvath.de>
  Bump revision to force eclass upgrade.

*form-history-control-1.2.6 (03 Jul 2010)

  03 Jul 2010; Martin Väth <martin@mvath.de>
  Bump version. Remove old ebuild.

*form-history-control-1.2.3 (13 Jun 2010)

  13 Jun 2010; Martin Väth <martin@mvath.de>
  New ebuild.