@@ -1,6 +1,4 @@
-DIST form_history_control-1.2.6-fx+sm.xpi 194395 RMD160 861f8757cc06b1ab363fb796a976ef83b2ee4976 SHA1 7e9b5fd6e950d775c06f3de3bc72b6801dad234b SHA256 6b1d7a48ae7fba66de94161cebaa3078d153f2986bfa1e4aa103f4882bbcd8f8
 DIST form_history_control-1.2.7-fx+sm.xpi 267897 RMD160 7da00618909faaaedbc7edcefb11ad6466c1a748 SHA1 736b771858d3b12f1b2b7f68bc249ea07d8dd214 SHA256 5c089910594a1525ddd3c1e1941721eb9a10872aacec7da88ff7827b882e0f60
-EBUILD form-history-control-1.2.6-r2.ebuild 454 RMD160 ee50758919f2914b41f41dd558f6db72a0057008 SHA1 f3fb3347047e4a0613c3b4bbf2e4bf71c76b2e1b SHA256 a809469f49e2b2c4e206ecc3d34351c3e1a5793fc5e631d75819d04be594937c
-EBUILD form-history-control-1.2.7.ebuild 523 RMD160 0fa49100c7dcf6d55fedb29f6f196687a99d6c63 SHA1 a345e23338a51d477d0aae649aae8c4fde96148c SHA256 b3b2505d1eb884b9b81aae61571232d88770a67afbeefc3ecbcaaee823faa870
-MISC ChangeLog 791 RMD160 dc2459c872bb9c04728ec83b8f8f19046a40c9c4 SHA1 8962189580053bfc4663c4a9c553b79c652fddf6 SHA256 9dfa9b604d17a1c20e986f0cfd240934550dc2e55f996cd621d1720442b4cee2
+EBUILD form-history-control-1.2.7.ebuild 469 RMD160 69d5d429fffc6072966fb1e6de1006847dc2abcb SHA1 2d253d0527ebf42c505b831a147119c2942a3fb5 SHA256 654159074bfa653ff1d3573f5e3c2931bb63068194e41c87c1cec29f485c890a
+MISC ChangeLog 892 RMD160 d5b8aabea57e6457170e8841db855e4db495a638 SHA1 761028bf7cf488d0783cd551b26efca264f91f27 SHA256 b734265edc3b2430dfe1718553e43ede458570bce8faf26484839443d210c0cd
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
