@@ -11,9 +11,9 @@ MY_P="${MY_P/-/_}"
 NAME="${MY_P}-fx+sm.xpi"
 DESCRIPTION="Edit the saved history of forms in mozilla"
 HOMEPAGE="http://www.formhistory.blogspot.com/"
-SRC_URI="https://addons.mozilla.org/en-us/firefox/downloads/file/101293/${NAME}?src=version-history&confirmed&src=external-blog -> ${NAME}"
+SRC_URI="http://releases.mozilla.org/pub/mozilla.org/addons/12021/${NAME}"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 IUSE=""
